Trigger GitHub Pages build

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://shahdkasumeh.github.io",
+  "name": "todo-react",
   "name": "first-react-app",
   "version": "0.1.0",
   "private": true,
